fixed issue with hamburger moving to center on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   display: flex;
+  flex-direction: column;
 }
 
 /* NAV */
@@ -32,13 +33,19 @@
   width: 50px;
   height: 50px;
   display: none;
+  margin-top: 20px;
+  margin-left: 20px;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 5%;
 }
 
 .nav-menu {
   position: absolute;
   display: none;
   width: 100px;
-  margin: 8em 0 0 -3em;
+  margin: 8em 0 0 -5.5em;
   text-align: center;
   opacity: 0.5;
   list-style-type: none;
@@ -53,6 +60,7 @@
   color: white;
 }
 
+/* hides checkbox uses to show menu inside hamburger */
 input {
   display: block;
   opacity: 0;
@@ -66,69 +74,50 @@ input {
 
 input[type='checkbox']:checked ~ .nav-menu {
   display: flex;
+  flex-direction: column;
 }
 
 .nav-hamburger {
-  height: 2px;
-  width: 35px;
+  height: 5px;
+  width: 50px;
   border: 1px black solid;
   background: black;
   opacity: 0.6;
   border-radius: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
   .nav-item {
     display: none;
   }
+  /* shows hamburger */
   .nav-toggle {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    margin-left: 80vw;
   }
   .nav-container {
-    background-color: rgba(255, 255, 255, 0);
-  }
-  ul {
-    display: flex;
-    flex-direction: column;
-  }
-  .header-container h1 {
-    top: 0%;
-  }
-}
-
-@media only screen and (max-width: 640px) {
-  .nav-toggle {
-    margin-left: 77vw;
-  }
-}
-
-@media only screen and (max-width: 420px) {
-  .nav-toggle {
-    margin-left: 70vw;
+    display: none;
   }
 }
 
 /* HEADER */
 
 .header-container {
-  margin-top: 0;
-  /* padding-top: 40px; */
-  position: relative;
-}
-
-#header-img {
-  width: 100vw;
-  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background-image: url('./img/bg-1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .header-container h1 {
   position: absolute;
-  top: 20%;
+  top: 10%;
   left: 5%;
   color: white;
   font-size: 4rem;
@@ -136,14 +125,18 @@ input[type='checkbox']:checked ~ .nav-menu {
 
 .header-container p {
   position: absolute;
-  top: 40%;
+  top: 25%;
   left: 5%;
   text-align: left;
   color: white;
 }
 
-@media only screen and (max-width: 1024px) {
-  .header-container h1 {
-    top: 0%;
-  }
+/* ABOUT */
+
+.about-container {
+  margin-top: 80vh;
+  background-color: rgba(255, 255, 255, 1);
+  padding: 60px 60px;
+  height: 100vh;
+  z-index: 1;
 }
